projects/better-auth/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: better-auth
  namespace: dev
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http
      namespace: infra
      sectionName: sqr-kr-wildcard-https
  hostnames:
    - dev-accounts-api.sqr.kr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: better-auth
          port: 80
          weight: 1
